// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel renders correctly, dev false 1`] = `
<div
  className="versions-panel-container"
>
  <input
    checked={false}
    id="versionsAddonDevMode"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="versionsAddonDevMode"
  >
    Developer mode
  </label>
  <div
    className="versions-panel-list"
  >
    <p>
      No versions found
    </p>
  </div>
</div>
`;

exports[`Panel renders correctly, dev true 1`] = `
<div
  className="versions-panel-container"
>
  <input
    checked={true}
    id="versionsAddonDevMode"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="versionsAddonDevMode"
  >
    Developer mode
  </label>
  <div
    className="versions-panel-list"
  >
    <p>
      No versions found
    </p>
  </div>
</div>
`;
